app/styles/common.css
/* ... */
.colors__container {
	width: 100%;
	font-size: var(--fonts-sm);
	font-weight: var(--bold);
	padding: var(--s-3);
	border: 2px solid var(--border);
	border-radius: var(--rounded-sm);
	background-color: var(--bg-input);
	margin-bottom: var(--s-3);
	overflow-x: auto;
}

.colors__grid {
	display: grid;
	justify-content: space-between;
	grid-template-columns: repeat(3, max-content);
	gap: var(--s-3);
}

.colors__table {
	width: 100%;
	border-spacing: 0;
	text-indent: 0;
	text-align: left;
	font-size: var(--fonts-xs);

	& svg {
		width: 1rem;
		height: 1rem;
		display: inline;
		vertical-align: sub;
		margin-right: 2px;
	}

	& td {
		padding-block: var(--s-2);
	}

	& tr:last-child td {
		border-bottom: none;
		padding-bottom: 0;
	}
}

.colors__contrast {
	text-wrap-mode: nowrap;

	&.fail {
		color: var(--theme-error);
	}

	&.success {
		color: var(--theme-success);
	}
}

.playwire__img {
	display: block;
	width: 200px;
	margin-right: auto;
	margin-left: auto;
}

.playwire__text {
	font-size: var(--fonts-sm);
	text-align: center;
}

.top-leaderboard {
	min-height: 130px;
	margin: 10px 0;
}

@media screen and (min-width: 601px) {
	.top-leaderboard {
		min-height: 120px;
	}
}

.youtube__container {
	position: relative;
	width: 100%;
	height: 0;
	padding-bottom: 56.25%;
}

.youtube__iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.divider {
	display: flex;
	width: 100%;
	align-items: center;
	color: var(--theme);
	font-size: var(--fonts-lg);
	text-align: center;
}

.divider::before,
.divider::after {
	flex: 1;
	border-bottom: 2px solid var(--theme-transparent);
	content: "";
}

.divider:not(:empty)::before {
	margin-right: 0.25em;
}

.divider:not(:empty)::after {
	margin-left: 0.25em;
}

.menu-container {
	position: relative;
}

.menu__items-container {
	position: absolute;
	top: 32px;
	border-radius: var(--rounded);
	background-color: var(--bg-darker);
	border: var(--border-style);
	z-index: 10;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	align-items: flex-start;
}

.menu__items-container__opens-left {
	right: 0;
}

.menu-container__scrolling {
	max-height: 300px;
	overflow-y: auto;
	scrollbar-color: rgb(83 65 91) transparent;
	scrollbar-width: thin;
	scrollbar-gutter: stable;
}

.menu__item {
	display: flex;
	font-size: var(--fonts-xs);
	color: var(--text);
	white-space: nowrap;
	gap: var(--s-2);
	border-radius: var(--rounded-xs);
	padding: var(--s-1-5) var(--s-2-5);
	background-color: var(--bg-darker);
	width: 100%;
	border: 0;
	justify-content: flex-start;
}

.menu__item:first-child {
	border-radius: 14.5px 14.5px var(--rounded-xs) var(--rounded-xs);
}

.menu__item:last-child {
	border-radius: var(--rounded-xs) var(--rounded-xs) 14.5px 14.5px;
}

.menu__item__active {
	background-color: var(--theme-very-transparent);
}

.menu__item__disabled {
	color: var(--text-lighter);
	cursor: not-allowed;
}

.menu__item__selected {
	background-color: var(--theme-transparent);
	font-weight: var(--extra-bold);
}

.menu__item__icon {
	width: 18px;
}

.menu__item__img {
	min-width: 24px;
	min-height: 24px;
}

.discord-icon {
	width: 1rem;
	display: inline;
	fill: #7289da;
}

.youtube-icon {
	width: 1rem;
	display: inline;
	fill: #f00;
}

.art__dialog__image-container {
	width: 100vw;
	height: 90vh;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: transparent;
	padding: 0;
	overflow: visible;
	flex-direction: column;
}

.art__thumbnail {
	cursor: pointer;
	transition: all 0.2s ease;
}

.art__thumbnail:hover {
	scale: 1.025;
}

.art__dialog__image-container:focus-visible {
	outline: none;
}

.art__dialog__tag {
	background-color: #fff;
	border-radius: var(--rounded);
	color: #000;
	font-size: var(--fonts-xxs);
	padding-inline: var(--s-1);
	margin-block: var(--s-1) var(--s-0-5);
}

.art__dialog__tag__user {
	background-color: var(--theme);
}

.art__dialog__description {
	font-size: var(--fonts-sm);
	text-align: center;
	color: #fff;
}

.art__dialog__image-container img {
	max-width: 100%;
	max-height: 100%;
	object-fit: contain;
}

.art__comms-header {
	font-weight: var(--bold);
	color: var(--theme-secondary);
	font-size: var(--fonts-sm);
}

.art__delete-tag-button {
	margin-block-start: -5px;
	margin-inline-start: 1px;
}

.art__creation-mode-switcher-container {
	height: 20px;
}

.art__tags-container {
	display: flex;
	gap: var(--s-0-5) var(--s-2);
	justify-content: center;
	flex-wrap: wrap;
	margin-block-start: var(--s-0-5);
}

html[dir="rtl"] .fix-rtl {
	transform: rotate(180deg);
}

.pagination__container {
	display: grid;
	grid-template-columns: auto auto auto;
	gap: var(--s-2);
	align-items: center;
	justify-items: center;
	justify-content: center;
}

.pagination__dots {
	display: none;
	align-items: center;
	justify-content: center;
	gap: var(--s-1);
	flex-wrap: wrap;
}

.pagination__dot {
	width: 0.6rem;
	height: 0.6rem;
	border-radius: 50%;
	background-color: var(--theme-transparent);
	transition: all 0.2s ease;
}

.pagination__dot__active {
	background-color: var(--theme);
}

.pagination__page-count {
	font-size: var(--fonts-sm);
	font-weight: var(--bold);
	color: var(--theme);
}

@media screen and (min-width: 640px) {
	.pagination__dots {
		display: flex;
	}

	.pagination__page-count {
		display: none;
	}
}

.tier__container {
	display: grid;
}

.tier__img {
	grid-column: 1;
	grid-row: 1;
}

.chart__container {
	height: var(--chart-height, 175px);
	width: var(--chart-width);
	background-color: var(--chart-bg, var(--bg-lighter));
	border-radius: var(--rounded);
}

.chart__tooltip {
	border: 1.75px solid var(--border);
	border-radius: var(--rounded);
	background-color: var(--bg-darker);
	padding: var(--s-1) var(--s-2);
	font-weight: var(--semi-bold);
	font-size: var(--fonts-sm);
	display: flex;
	flex-direction: column;
	gap: var(--s-1);
}

.chart__tooltip__value {
	margin-inline-start: auto;
	min-width: 40px;
}

.chart__dot {
	background-color: var(--dot-color);
	border-radius: 100%;
	width: 12px;
	height: 12px;
}
/* ... */

